[gd_scene load_steps=6 format=2]

[ext_resource path="res://Prototype/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Prototype/Main.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 360 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 700, 20 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20, 360 )

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 66.884, 600 )

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2( 0.6, 0.6 )
smoothing_enabled = true

[node name="NextLevel" type="Area2D" parent="."]

[node name="Right Wall" type="CollisionShape2D" parent="NextLevel"]
position = Vector2( 1300, 360 )
shape = SubResource( 1 )

[node name="Bottom Wall" type="CollisionShape2D" parent="NextLevel"]
position = Vector2( 640, 770 )
shape = SubResource( 2 )

[node name="Previous" type="Area2D" parent="."]

[node name="Left Wall" type="CollisionShape2D" parent="Previous"]
position = Vector2( -20, 360 )
shape = SubResource( 3 )

[connection signal="gameOver" from="Player" to="." method="_on_Player_gameOver"]
[connection signal="playerHit" from="Player" to="." method="_on_Player_playerHit"]
[connection signal="body_entered" from="NextLevel" to="." method="_on_NextLevel_body_entered"]
